# MoPT-backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  start.sh
MoPT/: pyvenv.cfg
MoPT_backend/: asgi.py  settings.py  urls.py  urls_legacy.py  wsgi.py
ai_insights/: api.py  apps.py  models.py  serializers.py  urls.py  views.py
ai_insights/management/commands/: compute_insight_icons.py  patch_insight_reason_and_icons.py  seed_insight_details.py  seed_insight_patch_011_012.py  seed_insights.py  (+1 more)
ai_insights/migrations/: 0001_initial.py  0002_insight_description_alter_insight_id_and_more.py  0003_insighttag_insight_icon_insight_is_new_and_more.py  0004_insight_summary_alter_insight_icon_and_more.py
campaigns/: admin.py  api.py  models.py  schemas.py
campaigns/migrations/: 0001_initial.py  0002_seed_campaigns.py
home/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
home/adapters/: public_trend.py
home/migrations/: 0001_initial.py  0002_alter_trendkeyword_options_and_more.py  0003_alter_trendkeyword_unique_together.py  0004_alter_trendkeyword_unique_together.py
home/services/: trend_sync.py
integrations/: admin.py  api.py  models.py  services.py
integrations/migrations/: 0001_initial.py  0002_seed_providers.py  0003_seed_providers.py  0004_integration.py  0005_integration_public_id.py  0006_posprovider.py  0007_remove_posprovider_active_and_more.py  0008_posconnection_last_error_posconnection_last_ping_at.py  0009_posprovider_active_posprovider_auth_and_more.py  0010_posconnection_disconnected_at_posconnection_reason_and_more.py  0011_alter_posconnection_unique_together_and_more.py  0012_cleanup_and_recreate_indexes.py  0013_remove_posconnection_uniq_active_pos_store_per_provider_and_more.py  0014_rename_pos_prov_store_idx_pos_prov_store_idx_v2.py
reports/: api.py  models.py  schemas.py
reports/migrations/: 0001_initial.py  0002_seed_daily_performances.py
scripts/: fix_insight_001_v2.py
users/: admin.py  api.py  apps.py  boot.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userprofile_ai_insights_notification_and_more.py  0003_remove_userprofile_ai_insights_notification_and_more.py  0004_notificationsetting.py  0005_usernotificationsetting_delete_notificationsetting.py  0006_alter_usernotificationsetting_marketing_alerts.py  0007_alter_usernotificationsetting_marketing_alerts.py  0008_subscription.py  0009_paymentmethod.py  0010_billinginvoice.py  0011_notice.py  0012_remove_notice_is_active_alter_notice_body_and_more.py  0013_notice_updated_at.py  0014_userprofile_profile_image_url.py  0015_seed_demo_users.py
(+3 files in other folders)
