[tool.poetry]
name = "MoPT-backend"
version = "0.1.0"
description = "MoPT backend service using Django & Django Ninja"
authors = ["kimdonghan <ehdgksemforh@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2,<6.0"

gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
dj-database-url = "^3.0.1"
python-dotenv = "^1.1.1"
requests = ">=2.32.3,<3.0.0"
psycopg2-binary = "^2.9.9"

django-ninja = "==1.4.1"
django-ninja-extra = "==0.30.0"
django-ninja-jwt = ">=5.3.7,<6.0.0"
djangorestframework = "^3.16.1"

django-extensions = "==3.2.3"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.2.0,<8.0.0"
pre-commit = ">=4.2.0,<5.0.0"
isort = ">=5.13.2,<6.0.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
